nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx
  namespace: test-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-nginx
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
