nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
  namespace: nginx-ingress
spec:
  selector:
    app: test-nginx
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
